welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: reassignment to val
    cpt = cpt+1
        ^Diagonal:17: error: reassignment to val
    num = num+1
        ^Diagonal:21: error: reassignment to val
    num = num+ 1
        ^